--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "task1",
+  "name": "task2",
   "version": "1.0.0",
   "description": "",
-  "main": "task.js",
+  "main": "task2.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fs": "0.0.1-security",
-    "xmlhttprequest": "^1.8.0"
+    "fs": "0.0.1-security"
   }
 }
